Use previous version of `simple-get` to maintain Node.js 0.10 compatibility

--- a/package.json
+++ b/package.json
@@ -27,7 +27,7 @@
     "os-homedir": "^1.0.2",
     "pump": "^1.0.1",
     "rc": "^1.1.6",
-    "simple-get": "^2.3.0",
+    "simple-get": "2.2.5",
     "tar-fs": "^1.14.0",
     "xtend": "4.0.1"
   },
