--- a/package.json
+++ b/package.json
@@ -32,8 +32,7 @@
     "rc": "^1.1.6",
     "simple-get": "^2.7.0",
     "tar-fs": "^1.13.0",
-    "tunnel-agent": "^0.6.0",
-    "xtend": "4.0.1"
+    "tunnel-agent": "^0.6.0"
   },
   "devDependencies": {
     "a-native-module": "^1.0.0",
