--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "prebuild-install-token",
   "version": "2.5.4",
+  "name": "prebuild-install",
   "description": "A command line tool for easily install prebuilds for multiple version of node/iojs on a specific platform",
   "scripts": {
     "test": "verify-travis-appveyor && tape test/*-test.js && npm run audit && npm run lint",
