--- a/package.json
+++ b/package.json
@@ -63,5 +63,8 @@
   "bugs": {
     "url": "https://github.com/mafintosh/prebuild-install/issues"
   },
-  "homepage": "https://github.com/mafintosh/prebuild-install"
+  "homepage": "https://github.com/mafintosh/prebuild-install",
+  "engines": {
+    "node": ">=4"
+  }
 }
