--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "A command line tool to easily install prebuilt binaries for multiple version of node/iojs on a specific platform",
   "scripts": {
     "test": "tape test/*-test.js && npm run lint",
-    "lint": "standard"
+    "lint": "standard && hallmark"
   },
   "keywords": [
     "prebuilt",
@@ -37,6 +37,7 @@
   },
   "devDependencies": {
     "a-native-module": "^1.0.0",
+    "hallmark": "^3.0.0",
     "nock": "^10.0.6",
     "rimraf": "^2.5.2",
     "standard": "^13.0.2",
